# formy

./: .bumpversion.cfg  .gitignore  HISTORY.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
formy/: __init__.py  fields.py  form.py  kev.py  utils.py
formy/templates/: __init__.py  base.py  fields.py  form.py
formy/templates/formy/fields/: base.html  ckeditor.html  select-multiple.html  select.html  textarea.html
formy/templates/formy/form/: table.html  ul.html
formy/tests/: fields.py
